@@ -1,8 +1,10 @@
 File Name: CHANGES
 
-01/25/2021 FASP 2.6.1:
+02/01/2021 FASP 2.6.1:
 - Add uninstall target to the new CMakeFile.txt;
 - Now both old and new cmake work!
+- Change output of fasp_solver_amg();
+- Update header file. 
 
 01/25/2021 FASP 2.6.0:
 - Switch cmake style.
